Fixed PR18213 by fixing getting the syscall number on arm kernels.

* runtime/syscall.h: For arm, use our own syscall_get_nr(), since the
  kernel supplied one doesn't work well. Rename all uses of
  syscall_get_nr() to _stp_syscall_get_nr().
* runtime/linux/task_finder.c: Rename  all uses of syscall_get_nr() to
  _stp_syscall_get_nr().
* runtime/linux/task_finder2.c: Ditto.
* tapset/linux/aux_syscalls.stp: Ditto.
* tapset/linux/utrace.stp: Ditto.